objects/ASI_KOR_SR_Payment_Settlement_Detail__c.object
<CustomObject>
    <description>For PRK Phase 2</description>
    <fields>
        <fullName>ASI_KOR_Actual_Pre_payment_Volume__c</fullName>
        <label>Actual Pre-payment Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Actual_Volume__c</fullName>
        <label>Actual Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Actual_Volume_wo_Pre_payment__c</fullName>
        <label>Actual Volume w/o Pre-payment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Approved_Basic_Unit_Cost__c</fullName>
        <label>Approved Basic Unit Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Approved_Unit_Cost_Basic_CA__c</fullName>
        <label>Planned Unit Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Approved_Unit_Cost_CA_Only__c</fullName>
        <label>Approved Unit Cost (CA Only)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Branch_Approval_Status__c</fullName>
        <formula>text( ASI_KOR_SR_Payment_Settlement__r.ASI_KOR_BM_Payment_Settlement_Header__r.ASI_KOR_Status__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Branch Approval Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand</label>
        <referenceTo>ASI_KOR_Brand__c</referenceTo>
        <relationshipLabel>SR Payment Settlement Details</relationshipLabel>
        <relationshipName>ASI_KOR_SR_Payment_Settlement_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Budget_Status__c</fullName>
        <formula>if( ASI_KOR_Settlement_Unit_Cost__c &gt; ASI_KOR_Unit_Cost_Cap_Actual_Volume__c , &quot;Exceed Scheme&quot;, &quot;Within Scheme&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Budget Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_CA_Amount_excl_Basic__c</fullName>
        <formula>/* before KR CRM P4.1
ASI_KOR_Actual_Volume__c *  ASI_KOR_Approved_Unit_Cost_CA_Only__c
*/
ASI_KOR_Actual_Volume_wo_Pre_payment__c *  ASI_KOR_Approved_Unit_Cost_CA_Only__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CA Amount (excl. Basic)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Category__c</fullName>
        <formula>ASI_KOR_Brand__r.ASI_KOR_Product_Categoray__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Channel__c</fullName>
        <formula>TEXT( ASI_KOR_Venue_Name__r.ASI_KOR_Venue_Pillar__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pillar</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Final_Basic_Amount__c</fullName>
        <formula>/* before KR CRM P4.2
ASI_KOR_Actual_Volume_wo_Pre_payment__c * ASI_KOR_Approved_Basic_Unit_Cost__c
*/
ASI_KOR_Actual_Volume__c * ASI_KOR_Settlement_Unit_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total VI</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Final_CA_Amount_excl_Basic__c</fullName>
        <formula>IF( TEXT(ASI_KOR_Pay_Option__c) =&apos;Full&apos;,   ASI_KOR_CA_Amount_excl_Basic__c   ,IF( TEXT(ASI_KOR_Pay_Option__c) = &apos;Scheme&apos;,  ASI_KOR_Total_Cost_Cap__c ,IF(TEXT(ASI_KOR_Pay_Option__c) = &apos;Random&apos;, ASI_KOR_Final_CA_Amount_excl_Bsic_Random__c, 0)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Final CA Amount (excl. Basic)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Final_CA_Amount_excl_Bsic_Random__c</fullName>
        <description>Final CA Amount (excl. Basic) for Random Pay Option</description>
        <label>Final CA Amount (excl. Basic)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Final_Total_Amount__c</fullName>
        <formula>/* before P4.2
ASI_KOR_Final_Basic_Amount__c +  ASI_KOR_Final_CA_Amount_excl_Basic__c + ASI_KOR_Pre_Payment_Amount__c
*/
ASI_KOR_Final_Basic_Amount__c + ASI_KOR_Pre_Payment_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Final Total Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Grade__c</fullName>
        <formula>TEXT(ASI_KOR_Venue_Name__r.ASI_KOR_Grade__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Grade</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Keyman_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Keyman Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>SR Payment Settlement Details</relationshipLabel>
        <relationshipName>SR_Payment_Settlement_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Keyman_Name__c</fullName>
        <formula>ASI_KOR_Keyman_Code__r.ASI_KOR_Keyman_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Keyman Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_National_Approval_Status__c</fullName>
        <formula>text( ASI_KOR_SR_Payment_Settlement__r.ASI_KOR_BM_Payment_Settlement_Header__r.ASI_KOR_RSD_Payment_Settlement__r.ASI_KOR_NSD_Payment_Settlement__r.ASI_KOR_Status__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>National Approval Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Pay_Option__c</fullName>
        <label>Pay Option</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Full</fullName>
                </value>
                <value>
                    <fullName>Scheme</fullName>
                </value>
                <value>
                    <fullName>No CA</fullName>
                </value>
                <value>
                    <fullName>Random</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_KOR_Pre_Payment_Amount__c</fullName>
        <label>Pre-Payment Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Progression__c</fullName>
        <formula>IF(
  AND(
    (ISBLANK(ASI_KOR_Target_Volume__c)||ASI_KOR_Target_Volume__c==0),
    (ISBLANK(ASI_KOR_Actual_Volume__c)||ASI_KOR_Actual_Volume__c==0)
  ),
  0,
  IF(
    (ISBLANK(ASI_KOR_Target_Volume__c)||ASI_KOR_Target_Volume__c==0),
    1,
    ASI_KOR_Actual_Volume__c / ASI_KOR_Target_Volume__c
  )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Progression</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Random_Reason__c</fullName>
        <label>Random Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Competition applied</fullName>
                </value>
                <value>
                    <fullName>Gap vs. plan</fullName>
                </value>
                <value>
                    <fullName>Changed agreement with venue</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_KOR_Regional_Approval_Status__c</fullName>
        <formula>text(ASI_KOR_SR_Payment_Settlement__r.ASI_KOR_BM_Payment_Settlement_Header__r.ASI_KOR_RSD_Payment_Settlement__r.ASI_KOR_Status__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Regional Approval Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Remarks__c</fullName>
        <label>Remarks</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Roll_up__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Roll-up?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_SR_Payment_Settlement_By_Brand__c</fullName>
        <label>SR Payment Settlement By Brand</label>
        <referenceTo>ASI_KOR_SR_Payment_Settlement_By_Brand__c</referenceTo>
        <relationshipLabel>SR Payment Settlement Details</relationshipLabel>
        <relationshipName>ASI_KOR_SR_Payment_Settlement_Details</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_SR_Payment_Settlement__c</fullName>
        <label>SR Payment Settlement</label>
        <referenceTo>ASI_KOR_SR_Payment_Settlement_Header__c</referenceTo>
        <relationshipLabel>SR Payment Settlement Details</relationshipLabel>
        <relationshipName>ASI_KOR_SR_Payment_Settlement_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_SR_Proposal_Detail__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SR Proposal Detail</label>
        <referenceTo>ASI_KOR_SR_Proposal_Detail__c</referenceTo>
        <relationshipLabel>SR Payment Settlement Details</relationshipLabel>
        <relationshipName>ASI_KOR_SR_Payment_Settlement_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Settlement_Unit_Cost__c</fullName>
        <label>Settlement Unit Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_System_Generated_Proposal__c</fullName>
        <formula>ASI_KOR_SR_Proposal_Detail__r.ASI_KOR_System_Generated__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>System Generated Proposal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Target_Volume__c</fullName>
        <label>Target Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Total_Cost_Cap__c</fullName>
        <formula>/* before KR CRM P4.1
ASI_KOR_Unit_Cost_Cap_Actual_Volume__c  *  ASI_KOR_Actual_Volume__c
*/
ASI_KOR_Unit_Cost_Cap_Actual_Volume__c  *  ASI_KOR_Actual_Volume_wo_Pre_payment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Cost Cap</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Total_VI_Number__c</fullName>
        <formula>ASI_KOR_Actual_Volume__c * ASI_KOR_Settlement_Unit_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total VI (Number)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Total_VI_Planned__c</fullName>
        <formula>ASI_KOR_Actual_Volume__c * ASI_KOR_Unit_Cost_Cap_Actual_Volume__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total VI (Planned)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_UOM__c</fullName>
        <formula>ASI_KOR_SR_Proposal_Detail__r.ASI_KOR_UOM__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UOM</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Unit_Cost_Cap_Actual_Volume__c</fullName>
        <label>Unit Cost Cap Based on Actual Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Unit_Cost_Exception__c</fullName>
        <formula>ASI_KOR_Settlement_Unit_Cost__c &gt; ASI_KOR_Approved_Unit_Cost_Basic_CA__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unit Cost Exception</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Venue_Code__c</fullName>
        <formula>ASI_KOR_Venue_Name__r.ASI_KOR_Customer_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Venue Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Venue_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Venue Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>SR Payment Settlement Details</relationshipLabel>
        <relationshipName>ASI_KOR_SR_Payment_Settlement_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>SR Payment Settlement Detail</label>
    <nameField>
        <displayFormat>SRSI-{000000000}</displayFormat>
        <label>SR Payment Settlement Detail ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SR Payment Settlement Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>